Fixed minor layout issues

--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -413,6 +413,7 @@ a.breadcrumb-active:hover, a.nav-link.active:hover {
 
 .accordion .card-block {
   padding: 0;
+  margin-right: 0.33rem;
 }
 
 .accordion .card-block .row {
